--- a/assets/_includes/footer.html
+++ b/assets/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer class="page-footer">
-  <a href="https://github.com/pixelnest/presskit.html">presskit.html</a> by <a href="http://pixelnest.io">Pixelnest Studio</a> — original <a href="http://dopresskit.com/">presskit()</a> by Rami Ismail (<a href="http://www.vlambeer.com/">Vlambeer</a>)
+  <a href="https://github.com/jordito/neopresskit.html">neopresskit.html</a> by Jordi Bertran Folch - based on <a href="https://github.com/pixelnest/presskit.html">presskit.html</a> by <a href="http://pixelnest.io">Pixelnest Studio</a> - <a href="http://dopresskit.com/">presskit()</a> by Rami Ismail (<a href="http://www.vlambeer.com/">Vlambeer</a>)
 </footer>
