--- a/assets/_includes/description.html
+++ b/assets/_includes/description.html
@@ -1,12 +1,24 @@
 <h2 id="description">Description</h2>
-<p>{{rawText presskit.description}}</p>
+{{#if presskit.description}}
+    <p>{{rawText presskit.description}}</p>
+{{/if}}
 
-<h2 id="history">History</h2>
 {{#if presskit.history}}
-<p>{{rawText presskit.history}}</p>
+<h2 id="history">History</h2>
+<p>
+    {{ rawText presskit.history }}
+</p>
 {{/if}}
 
 {{#each presskit.histories}}
-<h3>{{header}}</h3>
+{{#if header}}
+    <h3>{{header}}</h3>
+{{/if}}
+
+{{#if text}}
 <p>{{rawText text}}</p>
+{{#each text}}
+    <p>{{rawText this}}</p>
+{{/each}}
+{{/if}}
 {{/each}}
